# soporte-inteligente-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README_CAMBIO_LOCAL_SERVIDOR.md  Readme.md  app.py  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
backend/: Dockerfile  __init__.py  config.py  main.py  requirements.txt
documentation/: FRONTEND_REACT_REPLICA.md  MANUAL_USUARIO.md  MCP_FLOW.md  REACT.md
frontend/: app.py  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
local_agent/: main.py
mcp_server/: Dockerfile  main.py
obsidian_vault/: apache_permission_denied.md  backup_programado_falla.md  certificado_ssl_expirado.md  cors_error_aplicacion_interna.md  cuenta_gmail_workspace_suspendida.md  dns_resolucion_interna_falla.md  docker_contenedor_no_arranca.md  dominio_no_renueva_ssl_lets_encrypt.md  error_java_outofmemory.md  error_memoria_swap_agotada.md  error_postgres_conexiones.md  error_ssh_conexion_rechazada.md  error_vpn_mac.md  exchange_cola_correo_bloqueada.md  git_conflictos_merge.md  impresora_red_offline.md  kubernetes_pod_crashloopbackoff.md  limpieza_logs_servidor.md  macos_time_machine_backup_falla.md  mysql_consultas_lentas.md  nginx_502_bad_gateway.md  outlook_no_sincroniza_correo.md  pip_falla_ssl_python.md  puerto_bloqueado_firewall.md  redis_memoria_agotada.md  s3_acceso_denegado.md  servicio_linux_no_arranca_boot.md  sharepoint_archivo_bloqueado_edicion.md  teams_audio_reunion_no_funciona.md  usuario_bloqueado_active_directory.md  vmware_vm_no_arranca.md  wifi_red_no_aparece_windows.md  (+4 more)
(+45 files in other folders)
