[project]
name = "soporte-inteligente-rag"
version = "0.1.0"
description = "RAG support assistant built with Streamlit, LangChain, ChromaDB, and Gemini."
readme = "Readme.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.111.0",
    "chromadb==0.4.24",
    "langchain==0.1.13",
    "langchain-community==0.0.38",
    "langchain-google-genai==1.0.1",
    "langchain-text-splitters==0.0.2",
    "requests==2.31.0",
    "streamlit==1.32.0",
    "tiktoken==0.6.0",
    "uvicorn[standard]==0.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
